# OpencvStudy15

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/sen/com/opencvstudy15/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/sen/com/opencvstudy15/: IDCardActivity.java  MainActivity.java  NarActivity.java  OpencvUtils.java
app/src/main/res/layout/: activity_idcard.xml  activity_main.xml  activity_nar_choose.xml
app/src/main/res/values/: strings.xml
app/src/test/java/sen/com/opencvstudy15/: ExampleUnitTest.java
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/androidTest/java/com/tz/ndk/compress/: ExampleInstrumentedTest.java
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: ffmpeg_filter.c  ffmpeg_jni.c  ffmpeg_mod.c
ffmpeg/src/main/java/com/tz/ndk/compress/: FFmpegCompress.java  MainActivity.java
ffmpeg/src/main/res/layout/: activity_main.xml
ffmpeg/src/main/res/values/: strings.xml
ffmpeg/src/test/java/com/tz/ndk/compress/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
senffmpeg/: build.gradle
senffmpeg/src/androidTest/java/sen/com/senffmpeg/: ExampleInstrumentedTest.java
senffmpeg/src/main/: AndroidManifest.xml
senffmpeg/src/main/cpp/: cmdutils.c  ffmpeg_filter.c  ffmpeg_opt.c
senffmpeg/src/main/java/sen/com/senffmpeg/: MainActivity.java
senffmpeg/src/main/jniLibs/other/: config.h
senffmpeg/src/main/res/layout/: activity_main.xml
senffmpeg/src/main/res/values/: strings.xml
senffmpeg/src/test/java/sen/com/senffmpeg/: ExampleUnitTest.java
